--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Test đọc file</h5>
-                        <div id="fileDisplayArea"></div>
+                        <pre id="fileDisplayArea"></pre>
                     </div>
                 </div>
             </div>
