remove unnecessary text

--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
    <body onload="init()">
       <header>
          <h1>purify video</h1>
-         <h2>Watch purified youtube videos with no ads. Just focus</h2>
          <form method="get" action="/">
             <input placeholder="Enter youtube URL" type="input" name="v">
             <button>Purify</button>
@@ -107,18 +106,8 @@
          <iframe width="100%" height="100%" src=""
             frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       </section>
-      <section>
-         <h1>Are you looking for a way to enhance your YouTube viewing experience?</h1>
-  
-         <p>Look no further! This app offers a clean and minimalistic interface for a distraction-free experience.</p>
-         <p>Whether you're a teacher, professor, student, parent, or organizer, you can use our app to remove unwanted and inappropriate ads, comments, and related videos that may appear on the sidebar. </p>
-         <p>You can ensure that your students only see the content you want them to, while also keeping your own experience free of distractions. </p>
-         
-      </section>
       <footer>
-         <p>Youtube is the source of content</p>
-         <p><a href="https://github.com/purify-video" target="_blank"> Made with 🖤 in Wrocław</a></p>
-         <p>This website <strong>does not store</strong> any data such as cookies to enable essential site functionality.</p>
+         <p>hclinh</p>
       </footer>
    </body>
 </html>
