--- a/index.html
+++ b/index.html
@@ -1,113 +1,129 @@
 <!doctype html>
 <html lang="en">
-   <head>
-      <meta charset="utf-8">
-      <meta data-hid="description" name="description" content="Watch purified youtube videos with no ads. Just focus"/>
-      <meta data-hid="og:url" property="og:url" content="https://purify-video.github.io"/>
-      <meta data-hid="og:title" property="og:title" content="purify video – watch purified youtube videos with no ads"/>
-      <meta data-hid="og:description" property="og:description" content="Watch purified youtube videos with no ads. Just focus"/>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
-      <title>purify video – watch purified youtube videos with no ads</title>
-      <script type="text/javascript">
-         function init(){
-         	let params = new URLSearchParams(window.location.search.substr(1));
-         
-         	if(params.has('v')){
-         		purify(params.get('v').match(/(http:|https:)?(\/\/)?(www\.)?(youtube.com|youtu.be)\/(watch|embed)?(\?v=|\/)?(\S+)?/).pop())
-         	}
-         }
-         
-         function purify(key){
-         	document.querySelectorAll('.iframe')[0].style.display = '';
-         	return document.querySelectorAll('iframe')[0].setAttribute('src', 'https://www.youtube-nocookie.com/embed/'+key);
-         }
-      </script>
-      <style type="text/css">
-         * {
-         font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
-         }
-         a, a:hover, a:visited{
-         color: #000;
-         }
-         section, footer, header{
-         max-width:1200px;
-         width: 100%;
-         margin: auto;
-         }
-         header, footer{
-         text-align: center;
-         }
-         .iframe{
-         max-width: 1024px;
-         height: 560px;
-         margin:auto;
-         padding: 25px;
-         }
-         input{
-         display: inline;
-         padding: .375rem .75rem;
-         font-size: 1rem;
-         font-weight: 400;
-         line-height: 1.5;
-         color: #212529;
-         background-color: #fff;
-         background-clip: padding-box;
-         border: 1px solid #ced4da;
-         -webkit-appearance: none;
-         -moz-appearance: none;
-         appearance: none;
-         border-radius: .25rem;
-         transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-         }
-         button{
-         display: inline-block;
-         font-weight: 400;
-         line-height: 1.5;
-         color: #212529;
-         text-align: center;
-         text-decoration: none;
-         vertical-align: middle;
-         cursor: pointer;
-         -webkit-user-select: none;
-         -moz-user-select: none;
-         user-select: none;
-         background-color: transparent;
-         border: 1px solid transparent;
-         padding: .375rem .75rem;
-         font-size: 1rem;
-         border-radius: .25rem;
-         font-weight: 600;
-         color: #fff;
-         background-color: #46aae9;
-         border-color: #61a2e7;
-         }
-         section h1{
-         border-bottom: 1px solid #ededed;
-         font-size: 1.9em;
-         }
-         code{
-         background: #f7f7f7;
-         padding: 30px 0;
-         display: block;
-         font-family: Courier New;
-         }
-      </style>
-   </head>
-   <body onload="init()">
-      <header>
-         <h1>purify video</h1>
-         <form method="get" action="/">
+
+<head>
+    <meta charset="utf-8">
+    <meta data-hid="description" name="description" content="Watch purified youtube videos with no ads. Just focus" />
+    <meta data-hid="og:url" property="og:url" content="https://purify-video.github.io" />
+    <meta data-hid="og:title" property="og:title" content="purify video – watch purified youtube videos with no ads" />
+    <meta data-hid="og:description" property="og:description"
+        content="Watch purified youtube videos with no ads. Just focus" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <title>HCLINH</title>
+    <script type="text/javascript">
+        function init() {
+            let params = new URLSearchParams(window.location.search.substr(1));
+
+            if (params.has('v')) {
+                purify(params.get('v').match(/(http:|https:)?(\/\/)?(www\.)?(youtube.com|youtu.be)\/(watch|embed)?(\?v=|\/)?(\S+)?/).pop())
+            }
+        }
+
+        function purify(key) {
+            document.querySelectorAll('.iframe')[0].style.display = '';
+            return document.querySelectorAll('iframe')[0].setAttribute('src', 'https://www.youtube-nocookie.com/embed/' + key);
+        }
+    </script>
+    <style type="text/css">
+        * {
+            font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
+        }
+
+        a,
+        a:hover,
+        a:visited {
+            color: #000;
+        }
+
+        section,
+        footer,
+        header {
+            max-width: 1200px;
+            width: 100%;
+            margin: auto;
+        }
+
+        header,
+        footer {
+            text-align: center;
+        }
+
+        .iframe {
+            max-width: 1024px;
+            height: 560px;
+            margin: auto;
+            padding: 25px;
+        }
+
+        input {
+            display: inline;
+            padding: .375rem .75rem;
+            font-size: 1rem;
+            font-weight: 400;
+            line-height: 1.5;
+            color: #212529;
+            background-color: #fff;
+            background-clip: padding-box;
+            border: 1px solid #ced4da;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            border-radius: .25rem;
+            transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+        }
+
+        button {
+            display: inline-block;
+            font-weight: 400;
+            line-height: 1.5;
+            color: #212529;
+            text-align: center;
+            text-decoration: none;
+            vertical-align: middle;
+            cursor: pointer;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
+            background-color: transparent;
+            border: 1px solid transparent;
+            padding: .375rem .75rem;
+            font-size: 1rem;
+            border-radius: .25rem;
+            font-weight: 600;
+            color: #fff;
+            background-color: #46aae9;
+            border-color: #61a2e7;
+        }
+
+        section h1 {
+            border-bottom: 1px solid #ededed;
+            font-size: 1.9em;
+        }
+
+        code {
+            background: #f7f7f7;
+            padding: 30px 0;
+            display: block;
+            font-family: Courier New;
+        }
+    </style>
+</head>
+
+<body onload="init()">
+    <header>
+        <form method="get" action="/">
             <input placeholder="Enter youtube URL" type="input" name="v">
             <button>Purify</button>
-         </form>
-      </header>
-      <section class="iframe" style="display: none">
-         <iframe width="100%" height="100%" src=""
-            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      </section>
-      <footer>
-         <p>hclinh</p>
-      </footer>
-   </body>
+        </form>
+    </header>
+    <section class="iframe" style="display: none">
+        <iframe width="100%" height="100%" src="" frameborder="0" allow="autoplay; encrypted-media"
+            allowfullscreen></iframe>
+    </section>
+    <footer>
+        <p>© 2024 HCLINH</p>
+    </footer>
+</body>
+
 </html>
