--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </header>
 
-        <div class="row justify-content-center  mt-4 border-top">
+        <div class="row justify-content-center  mt-4">
             <div class="col-12">
                 <div class="iframe ratio ratio-16x9 mt-3" style="display: none;">
                     <iframe id="videoContainer" width="100%" height="auto" frameborder="0" allowfullscreen></iframe>
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <footer class="row justify-content-center mt-4 border-top">
+        <footer class="row justify-content-center mt-4">
             <div class="container mt-4">
                 <p class="text-center">&copy; 2024 HCLINH</p>
             </div>
